# bh-testing

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
bh-testing/: objects.py
bh_testing/: __init__.py  _utils.py  black_hole.py  camera.py  main.py  objects.py  scene.py  shader_renderer.py  texture.py
bh_testing/shaders/: black_hole.glsl
examples/videos/: test_fov.mkv
programs/: compute_shader.glsl
schwartz_render/: objects.py  test.py
schwartz_render/shaders/: compute_shader.glsl
shaders/: compute_shader.glsl
src/: main.py
src/shaders/: compute_shader.glsl
tests/: test.py
